--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "diy-toolkit",
-  "version": "0.1.0",
+  "name": "diy-hs-toolkit",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
