--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-electron-builder": "^1.4.3",
     "vue-cli-plugin-i18n": "^0.6.0",
+    "vue-grid-layout": "^2.3.7",
     "vue-template-compiler": "^2.6.10"
   }
 }
