refactor node-safe therefore, input is list of CNRL modules and CNRL shell contract number, then safeFlow give back data for presentation. WIP

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "core-js": "^3.4.3",
     "csv-parser": "^2.3.2",
     "moment-range": "^4.0.2",
-    "node-safeflow": "^0.5.0",
+    "node-safeflow": "0.5.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.0.0",
     "vue-password-strength-meter": "^1.7.1",
