adding backin charting chart.js  WIP

--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bs58": "^4.0.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
+    "chartjs-plugin-draggable": "^0.1.6",
     "core-js": "^3.4.3",
     "csv-parser": "^2.3.2",
     "moment-range": "^4.0.2",
-    "node-safeflow": "0.5.0",
+    "node-safeflow": "0.5.2",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-i18n": "^8.0.0",
     "vue-password-strength-meter": "^1.7.1",
     "vue-router": "^3.1.3",
