--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "chartjs-plugin-draggable": "^0.1.6",
     "core-js": "^3.4.3",
     "csv-parser": "^2.3.2",
+    "lodash": "^4.17.15",
     "moment-range": "^4.0.2",
     "node-safeflow": "0.5.2",
+    "polling-to-event": "^2.1.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
     "vue-i18n": "^8.0.0",
+    "vue-nonreactive": "^0.1.0",
     "vue-password-strength-meter": "^1.7.1",
     "vue-router": "^3.1.3",
+    "vue2-datepicker": "^3.5.0",
     "vuex": "^3.1.2",
     "zxcvbn": "^4.4.2"
   },
