--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bs58": "^4.0.1",
+    "cale-ai": "^0.0.4",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-draggable": "^0.1.6",
@@ -34,6 +35,7 @@
     "vue-password-strength-meter": "^1.7.1",
     "vue-router": "^3.1.3",
     "vue2-datepicker": "^3.5.0",
+    "vuedraggable": "^2.23.2",
     "vuex": "^3.1.2",
     "zxcvbn": "^4.4.2"
   },
@@ -45,7 +47,7 @@
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-plugin-unit-mocha": "^4.1.0",
     "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-service": "^4.4.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
