--- a/package.json
+++ b/package.json
@@ -18,48 +18,50 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bs58": "^4.0.1",
+    "object-hash": "^2.0.3",
     "cale-ai": "^0.0.4",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-draggable": "^0.1.6",
-    "core-js": "^3.4.3",
-    "csv-parser": "^2.3.2",
+    "vue-native-websocket": "^2.0.14",
+    "core-js": "^3.6.5",
+    "csv-parser": "^2.3.3",
     "lodash": "^4.17.15",
     "moment-range": "^4.0.2",
     "node-safeflow": "^0.5.4",
     "polling-to-event": "^2.1.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
-    "vue-i18n": "^8.0.0",
+    "vue-i18n": "^8.18.2",
     "vue-nonreactive": "^0.1.0",
-    "vue-password-strength-meter": "^1.7.1",
-    "vue-router": "^3.1.3",
-    "vue2-datepicker": "^3.5.0",
+    "vue-password-strength-meter": "^1.7.2",
+    "vue-router": "^3.3.4",
+    "vue2-datepicker": "^3.6.0",
     "vuedraggable": "^2.23.2",
-    "vuex": "^3.1.2",
+    "vuex": "^3.5.1",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-e2e-cypress": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-unit-mocha": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.4.1",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-e2e-cypress": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-router": "^4.4.6",
+    "@vue/cli-plugin-unit-mocha": "^4.4.6",
+    "@vue/cli-plugin-vuex": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
-    "electron": "^6.0.0",
+    "electron": "^6.1.12",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-electron-builder": "^1.4.3",
-    "vue-cli-plugin-i18n": "^0.6.0",
+    "sass": "^1.26.9",
+    "sass-loader": "^8.0.2",
+    "vue-cli-plugin-electron-builder": "^1.4.6",
+    "vue-cli-plugin-i18n": "^0.6.1",
     "vue-grid-layout": "^2.3.7",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.11"
   }
 }
