--- a/package.json
+++ b/package.json
@@ -18,27 +18,28 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bs58": "^4.0.1",
-    "object-hash": "^2.0.3",
     "cale-ai": "^0.0.4",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-draggable": "^0.1.6",
-    "vue-native-websocket": "^2.0.14",
     "core-js": "^3.6.5",
     "csv-parser": "^2.3.3",
     "lodash": "^4.17.15",
     "moment-range": "^4.0.2",
-    "node-safeflow": "^0.5.4",
+    "node-safeflow": "^0.5.5",
+    "object-hash": "^2.0.3",
     "polling-to-event": "^2.1.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-i18n": "^8.18.2",
+    "vue-native-websocket": "^2.0.14",
     "vue-nonreactive": "^0.1.0",
     "vue-password-strength-meter": "^1.7.2",
     "vue-router": "^3.3.4",
     "vue2-datepicker": "^3.6.0",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.5.1",
+    "websocket": "^1.0.32",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
