--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "vue-cli-service lint",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
-    "couple": "npm run electron:serve && npm run safeflow",
+    "couple": "npm-run-all electron:serve safeflow",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
@@ -59,6 +59,7 @@
     "electron": "^6.1.12",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-electron-builder": "^1.4.6",
