--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "axios": "^0.19.2",
     "bs58": "^4.0.1",
     "cale-ai": "^0.0.4",
-    "chart.js": "^2.9.3",
+    "chart.js": "2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-draggable": "^0.1.6",
     "core-js": "^3.6.5",
