--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "polling-to-event": "^2.1.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
+    "vue-draggable-resizable": "^2.3.0",
+    "vue-dragscroll": "^3.0.1",
     "vue-i18n": "^8.18.2",
     "vue-native-websocket": "^2.0.14",
     "vue-nonreactive": "^0.1.0",
