--- a/package.json
+++ b/package.json
@@ -52,13 +52,12 @@
     "@vue/cli-plugin-e2e-cypress": "^4.4.6",
     "@vue/cli-plugin-eslint": "^4.4.6",
     "@vue/cli-plugin-router": "^4.4.6",
-    "@vue/cli-plugin-unit-mocha": "^4.4.6",
+    "@vue/cli-plugin-unit-jest": "^5.0.1",
     "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
     "@vue/eslint-config-standard": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-eslint": "^10.1.0",
-    "chai": "^4.1.2",
     "electron": "^6.1.12",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
