--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "babel-eslint": "^10.1.0",
     "electron": "^15.5.6",
     "electron-devtools-installer": "^3.1.0",
+    "electron-log": "^4.4.8",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "npm-run-all": "^4.1.5",
