--- a/package.json
+++ b/package.json
@@ -1,34 +1,80 @@
 {
-  "name": "bentoboxds",
-  "version": "0.0.0",
+  "name": "diy-hs-toolkit",
+  "version": "0.7.6",
   "private": true,
+  "description": "BentoBox - DS toolkit",
+  "author": "aboynejames",
+  "main": "background.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom --root src/",
-    "test:e2e": "start-server-and-test preview :4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e",
+    "lint": "vue-cli-service lint",
+    "couple": "npm-run-all electron:serve safeflow",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps",
+    "safeflow": "node /var/www/html/damahub/code/peerlink/src/index.js"
   },
   "dependencies": {
-    "pinia": "^2.0.28",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "axios": "^0.19.2",
+    "bs58": "^4.0.1",
+    "cale-ai": "^0.0.4",
+    "chai-as-promised": "^7.1.1",
+    "chart.js": "2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
+    "chartjs-plugin-draggable": "^0.1.6",
+    "core-js": "^3.6.5",
+    "csv-parser": "^2.3.3",
+    "electron-builder": "^23.3.3",
+    "lodash": "^4.17.15",
+    "moment-range": "^4.0.2",
+    "object-hash": "^2.0.3",
+    "polling-to-event": "^2.1.0",
+    "vue": "^2.7.13",
+    "vue-chartjs": "^3.5.0",
+    "vue-draggable-resizable": "^2.3.0",
+    "vue-dragscroll": "^3.0.1",
+    "vue-i18n": "^8.18.2",
+    "vue-native-websocket": "^2.0.14",
+    "vue-nonreactive": "^0.1.0",
+    "vue-password-strength-meter": "^1.7.2",
+    "vue-router": "^3.3.4",
+    "vue2-datepicker": "^3.6.0",
+    "vuedraggable": "^2.23.2",
+    "vuex": "^3.5.1",
+    "websocket": "^1.0.32",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/test-utils": "^2.2.6",
-    "cypress": "^12.0.2",
-    "eslint": "^8.22.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^20.0.3",
-    "prettier": "^2.7.1",
-    "start-server-and-test": "^1.15.2",
-    "vite": "^4.0.0",
-    "vitest": "^0.25.6"
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@kazupon/vue-i18n-loader": "^0.3.0",
+    "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-e2e-cypress": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
+    "@vue/cli-plugin-router": "^4.4.6",
+    "@vue/cli-plugin-unit-jest": "^4.1.1",
+    "@vue/cli-plugin-vuex": "^4.4.6",
+    "@vue/cli-service": "^4.4.6",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "@vue/test-utils": "^1.3.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
+    "electron": "^15.5.6",
+    "electron-devtools-installer": "^3.1.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.26.9",
+    "sass-loader": "^8.0.2",
+    "spectron": "15.0.0",
+    "vue-cli-plugin-electron-builder": "^2.1.1",
+    "vue-cli-plugin-i18n": "^0.6.1",
+    "vue-grid-layout": "^2.3.7",
+    "vue-template-compiler": "^2.6.11"
   }
 }
