--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-draggable": "^0.1.6",
     "core-js": "^3.6.5",
+    "corejs": "^1.0.0",
     "csv-parser": "^2.3.3",
     "electron-builder": "^23.3.3",
     "lodash": "^4.17.15",
