--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "core-js": "^3.6.5",
     "csv-parser": "^2.3.3",
     "electron-builder": "^23.3.3",
+    "electron-log": "^4.4.8",
     "lodash": "^4.17.15",
     "moment-range": "^4.0.2",
     "object-hash": "^2.2.0",
